Fixed online button, arrow down / up depending on if online nav is visible on mobile

--- a/src/components/onlineusers/OnlineUsers.css
+++ b/src/components/onlineusers/OnlineUsers.css
@@ -9,7 +9,7 @@
     color: #fafafa;
     border-left: solid 2px rgb(63, 63, 63);
     cursor: pointer;
-    transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
+    transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .online-users h2 {
@@ -97,12 +97,17 @@
 
     .online-side {
         position: fixed;
-        opacity: 1;
-        top: 12vh;
+        top: 0vh;
         left: 10vw;
+        z-index: 100;
+        display: flex;
+        align-items: center;
+        text-transform: uppercase;
+        opacity: 1;       
         background-color: #121212;
+        color: rgb(148, 189, 148);
         border-radius: 3px;
-        cursor: pointer;
+        cursor: pointer;        
     }
 
     .active {
